--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
   <a href="about.html"><i class="fas fa-user"></i>About</a>
   <a href="https://github.com/woletee"><i class="fas fa-briefcase"></i>Projects</a>
   <a href="https://github.com/woletee" target="_blank"><i class="fab fa-github"></i> GitHub</a>
-  <a href="Cv.pdf"><i class="fas fa-file-alt"></i>Resume</a>
+  <a href="Cv.pdf" target="_blank"><i class="fas fa-file-alt"></i>Resume</a>
   <a href="C:\Users\Eyerus\Desktop\Sunset.jpg"><i class="fas fa-blog"></i>Blogs</a>
 </div>
 
