--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 </head>
 <body>
 <div class="navbar">
-  <a href="Home.html"><i class="fas fa-home"></i>Home</a>
+  <a href="Home.html"><i class="fas fa-home"></i>home</a>
   <a href="about.html"><i class="fas fa-user"></i>About</a>
   <a href="https://github.com/woletee"><i class="fas fa-briefcase"></i>Projects</a>
   <a href="https://github.com/woletee" target="_blank"><i class="fab fa-github"></i> GitHub</a>
