--- a/index.html
+++ b/index.html
@@ -82,11 +82,11 @@
 <body>
 <div class="navbar">
   <a href="Home.html"><i class="fas fa-home"></i>home</a>
-  <a href="about.html"><i class="fas fa-user"></i>About</a>
-  <a href="https://github.com/woletee"><i class="fas fa-briefcase"></i>Projects</a>
+  <a href="About.html"><i class="fas fa-user"></i>About</a>
+  <a href="projects"><i class="fas fa-briefcase"></i>Projects</a>
   <a href="https://github.com/woletee" target="_blank"><i class="fab fa-github"></i> GitHub</a>
   <a href="Cv.pdf" target="_blank"><i class="fas fa-file-alt"></i>Resume</a>
-  <a href="C:\Users\Eyerus\Desktop\Sunset.jpg"><i class="fas fa-blog"></i>Blogs</a>
+  <a href="Blogs.html"><i class="fas fa-blog"></i>Blogs</a>
 </div>
 
 <div class="header" id="home">
