--- a/projects.html
+++ b/projects.html
@@ -1,3 +1,16 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Your Page Title</title>
+    <style>
+        body {
+            background-image: url('path_to_your_image/back.PNG');
+            background-repeat: no-repeat;
+            background-size: cover;
+        }
+    </style>
+</head>
+<body>
 <h2>1) Online Bus Ticket Booking System</h2>
 <div>
     <img src="/Images/post1.PNG" alt="Projects" title="Optional title attribute" width="200"/>
@@ -33,3 +46,5 @@
 <div>
     <!-- Image tags for the second Animal Card, similar to above -->
 </div>
+</body>
+</html>
