--- a/projects.html
+++ b/projects.html
@@ -4,7 +4,7 @@
     <title>Your Page Title</title>
     <style>
         body {
-            background-image: url('path_to_your_image/back.PNG');
+            background-image: url('https://th.bing.com/th/id/OIP.CDFwWuwNv27fcHTIa4H1tgHaE7?w=252&h=180&c=7&r=0&o=5&dpr=1.3&pid=1.7');
             background-repeat: no-repeat;
             background-size: cover;
         }
