--- a/projects.html
+++ b/projects.html
@@ -8,6 +8,10 @@
             background-repeat: no-repeat;
             background-size: cover;
         }
+     .header h1 {
+    font-size: 2.5em;
+    transition: transform 0.3s ease;
+  }
     </style>
 </head>
 <body>
