--- a/projects.html
+++ b/projects.html
@@ -8,10 +8,12 @@
             background-repeat: no-repeat;
             background-size: cover;
         }
-     .header h1 {
-    font-size: 2.5em;
-    transition: transform 0.3s ease;
-  }
+  .header h1 {
+  color: #FFFFFF; /* Replace with the color you want, e.g., white */
+  font-size: 2.5em;
+  transition: transform 0.3s ease;
+}
+
     </style>
 </head>
 <body>
