--- a/projects.html
+++ b/projects.html
@@ -8,7 +8,7 @@
             background-repeat: no-repeat;
             background-size: cover;
         }
-  h2 {
+  .header h2 {
   color: #FFFFFF; /* Replace with the color you want, e.g., white */
 
 }
