--- a/projects.html
+++ b/projects.html
@@ -16,7 +16,9 @@
     </style>
 </head>
 <body>
+<div class="header">
 <h2>1) Online Bus Ticket Booking System</h2>
+</div>
 <div>
     <img src="/Images/post1.PNG" alt="Projects" title="Optional title attribute" width="200"/>
     <img src="/Images/post2.PNG" alt="Projects" title="Optional title attribute" width="200"/>
