--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
 
 <div class="header" id="home">
   
-  <img src="C:\Users\Eyerus\Pictures\myimage1.png" alt="Description of Image" width="550" height="250":> <!-- Add your image path here -->
-
+ 
+    <img src="/Images/Capture.PNG" alt="Projects" title="Optional title attribute" width="200"/>
   <h1 class="greeting">Hi there! <span class="wave">👋</span></h1></div>
   <h1 class="greeting">   I'm W.Maryam LIYEW<span class="wave"></span></h1>
 </div>
