--- a/Home.html
+++ b/Home.html
@@ -1,1 +1,103 @@
-print("hello world")
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Portfolio</title>
+<!-- Include Font Awesome CDN for icons -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
+<style>
+  body {
+    font-family: 'Arial', sans-serif;
+ 
+    color: white;
+    margin: 0;
+    padding: 0;
+    background-image: url('https://th.bing.com/th/id/OIP.CDFwWuwNv27fcHTIa4H1tgHaE7?w=252&h=180&c=7&r=0&o=5&dpr=1.3&pid=1.7'); /* Replace with your image URL */
+    background-size: cover; /* This will make sure your image covers the whole page */
+    background-repeat: no-repeat; /* This will prevent the image from repeating */
+    background-size: cover;
+    background-repeat: no-repeat;
+   
+  }
+  .navbar {
+    display: flex;
+    justify-content: flex-end; /* Align nav items to the right */
+    padding: 1em;
+    background-color: #333;
+  }
+  .navbar a {
+    color: white;
+    text-decoration: none;
+    padding: 10px 20px;
+    display: flex;
+    align-items: center;
+    border: 2px solid transparent;
+  }
+  .navbar a:hover {
+    color: #f0f0f0;
+    text-decoration: underline;
+    text-decoration-color: #ff00ff;
+    border-color: #ff00ff;
+  }
+  .header {
+    display: flex;
+    align-items: center;
+    padding: 2em;
+    text-align: left; /* Align text to the left */
+  }
+  .header img {
+    max-width: 100px; /* Adjust the size as needed */
+    margin-right: 20px; /* Space between image and text */
+  }
+  .header .greeting {
+    margin-right: auto; /* Push everything else to the right */
+  }
+  .header h1 {
+    font-size: 2.5em;
+    transition: transform 0.3s ease;
+  }
+  .header h1:hover {
+    transform: scale(1.1);
+  }
+  .cta {
+    text-decoration: none;
+    background-color: purple;
+    color: white;
+    padding: 1em 2em;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+  }
+  .cta:hover {
+    background-color: #6f42c1;
+  }
+  .footer {
+    text-align: center;
+    padding: 1em;
+    background-color: #333;
+  }
+
+</style>
+</head>
+<body>
+<div class="navbar">
+  <a href="Home.html"><i class="fas fa-home"></i>home</a>
+  <a href="About.html"><i class="fas fa-user"></i>About</a>
+  <a href="projects.html"><i class="fas fa-briefcase"></i>Projects</a>
+  <a href="https://github.com/woletee" target="_blank"><i class="fab fa-github"></i> GitHub</a>
+  <a href="Cv.pdf" target="_blank"><i class="fas fa-file-alt"></i>Resume</a>
+  <a href="Blogs.html"><i class="fas fa-blog"></i>Blogs</a>
+</div>
+
+<div class="header" id="home">
+  
+ 
+    <img src="/Images/Capture.PNG" alt="Projects" title="Optional title attribute" width="400"/>
+  <h1 class="greeting">Hi there! <span class="wave">👋</span></h1></div>
+  <h1 class="greeting">   I'm W.Maryam LIYEW<span class="wave"></span></h1>
+</div>
+
+<!-- Additional sections for About, Projects, Resume, and Blogs would go here -->
+
+</body>
+</html>
