--- a/About.html
+++ b/About.html
@@ -1,2 +1,2 @@
 
-    <img src="/Images/Capture.PNG" alt="Projects" title="Optional title attribute" width="400"/>
+    <img src="/Images/myimage.jpg" alt="Projects" title="Optional title attribute" width="400"/>
