--- a/About.html
+++ b/About.html
@@ -98,3 +98,56 @@
 </body>
 </html>
     <img src="/Images/myimage.jpg" alt="Projects" title="Optional title attribute" width="400"/>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Professional Skillset</title>
+<style>
+  body {
+    font-family: Arial, sans-serif;
+    background-color: #1c1c3c;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
+  }
+  .container {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 10px;
+  }
+  .skill {
+    border: 1px solid #5d5d81;
+    padding: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 5px;
+  }
+  h1 {
+    grid-column: 1 / -1;
+    color: #d3d3f8;
+    text-align: center;
+  }
+</style>
+</head>
+<body>
+<div class="container">
+  <h1>Professional Skillset</h1>
+  <div class="skill">AWS</div>
+  <div class="skill">JS</div>
+  <div class="skill">Node.js</div>
+  <div class="skill">React</div>
+  <div class="skill">Flask</div>
+  <div class="skill">GraphQL</div>
+  <div class="skill">Django</div>
+  <div class="skill">Python</div>
+  <!-- Add other skills here -->
+</div>
+</body>
+</html>
+
