--- a/About.html
+++ b/About.html
@@ -98,6 +98,8 @@
 </body>
 </html>
     <img src="/Images/myimage.jpg" alt="Projects" title="Optional title attribute" width="400"/>
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -124,9 +126,14 @@
     border: 1px solid #5d5d81;
     padding: 20px;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     border-radius: 5px;
+  }
+  .icon-placeholder {
+    font-size: 3rem;
+    margin-bottom: 8px;
   }
   h1 {
     grid-column: 1 / -1;
@@ -138,16 +145,39 @@
 <body>
 <div class="container">
   <h1>Professional Skillset</h1>
-  <div class="skill">AWS</div>
-  <div class="skill">JS</div>
-  <div class="skill">Node.js</div>
-  <div class="skill">React</div>
-  <div class="skill">Flask</div>
-  <div class="skill">GraphQL</div>
-  <div class="skill">Django</div>
-  <div class="skill">Python</div>
-  <!-- Add other skills here -->
+  <div class="skill">
+    <span class="icon-placeholder">[AWS icon placeholder]</span>
+    AWS
+  </div>
+  <div class="skill">
+    <span class="icon-placeholder">[JS icon placeholder]</span>
+    JS
+  </div>
+  <div class="skill">
+    <span class="icon-placeholder">[Node.js icon placeholder]</span>
+    Node.js
+  </div>
+  <div class="skill">
+    <span class="icon-placeholder">[React icon placeholder]</span>
+    React
+  </div>
+  <div class="skill">
+    <span class="icon-placeholder">[Flask icon placeholder]</span>
+    Flask
+  </div>
+  <div class="skill">
+    <span class="icon-placeholder">[GraphQL icon placeholder]</span>
+    GraphQL
+  </div>
+  <div class="skill">
+    <span class="icon-placeholder">[Django icon placeholder]</span>
+    Django
+  </div>
+  <div class="skill">
+    <span class="icon-placeholder">[Python icon placeholder]</span>
+    Python
+  </div>
+  <!-- Add other skills and placeholders here -->
 </div>
 </body>
 </html>
-
