--- a/About.html
+++ b/About.html
@@ -100,6 +100,7 @@
     <img src="/Images/myimage.jpg" alt="Projects" title="Optional title attribute" width="400"/>
 
 
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -131,8 +132,8 @@
     align-items: center;
     border-radius: 5px;
   }
-  .icon-placeholder {
-    font-size: 3rem;
+  .icon {
+    font-size: 2rem; /* Placeholder size for icons */
     margin-bottom: 8px;
   }
   h1 {
@@ -146,38 +147,38 @@
 <div class="container">
   <h1>Professional Skillset</h1>
   <div class="skill">
-    <span class="icon-placeholder">[AWS icon placeholder]</span>
+    <div class="icon">🌐</div> <!-- Placeholder icon for AWS -->
     AWS
   </div>
   <div class="skill">
-    <span class="icon-placeholder">[JS icon placeholder]</span>
+    <div class="icon">🔤</div> <!-- Placeholder icon for JS -->
     JS
   </div>
   <div class="skill">
-    <span class="icon-placeholder">[Node.js icon placeholder]</span>
+    <div class="icon">🟢</div> <!-- Placeholder icon for Node.js -->
     Node.js
   </div>
   <div class="skill">
-    <span class="icon-placeholder">[React icon placeholder]</span>
+    <div class="icon">⚛️</div> <!-- Placeholder icon for React -->
     React
   </div>
   <div class="skill">
-    <span class="icon-placeholder">[Flask icon placeholder]</span>
+    <div class="icon">🔥</div> <!-- Placeholder icon for Flask -->
     Flask
   </div>
   <div class="skill">
-    <span class="icon-placeholder">[GraphQL icon placeholder]</span>
+    <div class="icon">🔗</div> <!-- Placeholder icon for GraphQL -->
     GraphQL
   </div>
   <div class="skill">
-    <span class="icon-placeholder">[Django icon placeholder]</span>
+    <div class="icon">🐍</div> <!-- Placeholder icon for Django -->
     Django
   </div>
   <div class="skill">
-    <span class="icon-placeholder">[Python icon placeholder]</span>
+    <div class="icon">🐍</div> <!-- Placeholder icon for Python -->
     Python
   </div>
-  <!-- Add other skills and placeholders here -->
+  <!-- Add other skills with icons here -->
 </div>
 </body>
 </html>
