--- a/About.html
+++ b/About.html
@@ -97,6 +97,90 @@
 
 </body>
 </html>
+
+</html>
     <img src="/Images/myimage.jpg" alt="Projects" title="Optional title attribute" width="400"/>
 
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Professional Skillset</title>
+<style>
+  body {
+    font-family: Arial, sans-serif;
+    background-color: #1c1c3c;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
+  }
+  .container {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 10px;
+  }
+  .skill {
+    border: 1px solid #5d5d81;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 5px;
+  }
+  .icon {
+    font-size: 2rem; /* Placeholder size for icons */
+    margin-bottom: 8px;
+  }
+  h1 {
+    grid-column: 1 / -1;
+    color: #d3d3f8;
+    text-align: center;
+  }
+</style>
+</head>
+<body>
+<div class="container">
+  <h1>Professional Skillset</h1>
+  <div class="skill">
+    <div class="icon">🌐</div> <!-- Placeholder icon for AWS -->
+    AWS
+  </div>
+  <div class="skill">
+    <div class="icon">🔤</div> <!-- Placeholder icon for JS -->
+    JS
+  </div>
+  <div class="skill">
+    <div class="icon">🟢</div> <!-- Placeholder icon for Node.js -->
+    Node.js
+  </div>
+  <div class="skill">
+    <div class="icon">⚛️</div> <!-- Placeholder icon for React -->
+    React
+  </div>
+  <div class="skill">
+    <div class="icon">🔥</div> <!-- Placeholder icon for Flask -->
+    Flask
+  </div>
+  <div class="skill">
+    <div class="icon">🔗</div> <!-- Placeholder icon for GraphQL -->
+    GraphQL
+  </div>
+  <div class="skill">
+    <div class="icon">🐍</div> <!-- Placeholder icon for Django -->
+    Django
+  </div>
+  <div class="skill">
+    <div class="icon">🐍</div> <!-- Placeholder icon for Python -->
+    Python
+  </div>
+  <!-- Add other skills with icons here -->
+</div>
+</body>
+</html>
 
