--- a/About.html
+++ b/About.html
@@ -60,6 +60,41 @@
 </div>
 
 <!-- Additional content such as header, skills section, and other body elements go here -->
-
+div class="container">
+  <h1>Professional Skillset</h1>
+  <div class="skill">
+    <div class="icon">🌐</div> <!-- Placeholder icon for AWS -->
+    AWS
+  </div>
+  <div class="skill">
+    <div class="icon">🔤</div> <!-- Placeholder icon for JS -->
+    JS
+  </div>
+  <div class="skill">
+    <div class="icon">🟢</div> <!-- Placeholder icon for Node.js -->
+    Node.js
+  </div>
+  <div class="skill">
+    <div class="icon">⚛️</div> <!-- Placeholder icon for React -->
+    React
+  </div>
+  <div class="skill">
+    <div class="icon">🔥</div> <!-- Placeholder icon for Flask -->
+    Flask
+  </div>
+  <div class="skill">
+    <div class="icon">🔗</div> <!-- Placeholder icon for GraphQL -->
+    GraphQL
+  </div>
+  <div class="skill">
+    <div class="icon">🐍</div> <!-- Placeholder icon for Django -->
+    Django
+  </div>
+  <div class="skill">
+    <div class="icon">🐍</div> <!-- Placeholder icon for Python -->
+    Python
+  </div>
+  <!-- Add other skills with icons here -->
+</div>
 </body>
 </html>
