--- a/About.html
+++ b/About.html
@@ -9,22 +9,22 @@
 <style>
   body {
     font-family: 'Arial', sans-serif;
+ 
     color: white;
     margin: 0;
     padding: 0;
     background-image: url('https://th.bing.com/th/id/OIP.CDFwWuwNv27fcHTIa4H1tgHaE7?w=252&h=180&c=7&r=0&o=5&dpr=1.3&pid=1.7'); /* Replace with your image URL */
     background-size: cover; /* This will make sure your image covers the whole page */
     background-repeat: no-repeat; /* This will prevent the image from repeating */
+    background-size: cover;
+    background-repeat: no-repeat;
+   
   }
   .navbar {
-    position: fixed; /* Fixed position */
-    top: 0; /* Stick to the top */
-    width: 100%; /* Take full width */
     display: flex;
     justify-content: flex-end; /* Align nav items to the right */
     padding: 1em;
     background-color: #333;
-    z-index: 1000; /* Ensure navbar is above other elements */
   }
   .navbar a {
     color: white;
@@ -43,10 +43,40 @@
   .header {
     display: flex;
     align-items: center;
-    padding-top: 80px; /* Add padding to account for fixed navbar */
+    padding: 2em;
     text-align: left; /* Align text to the left */
   }
-  /* ... other styles ... */
+  .header img {
+    max-width: 100px; /* Adjust the size as needed */
+    margin-right: 20px; /* Space between image and text */
+  }
+  .header .greeting {
+    margin-right: auto; /* Push everything else to the right */
+  }
+  .header h1 {
+    font-size: 2.5em;
+    transition: transform 0.3s ease;
+  }
+  .header h1:hover {
+    transform: scale(1.1);
+  }
+  .cta {
+    text-decoration: none;
+    background-color: purple;
+    color: white;
+    padding: 1em 2em;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+  }
+  .cta:hover {
+    background-color: #6f42c1;
+  }
+  .footer {
+    text-align: center;
+    padding: 1em;
+    background-color: #333;
+  }
+
 </style>
 </head>
 <body>
@@ -59,8 +89,39 @@
   <a href="Blogs.html"><i class="fas fa-blog"></i>Blogs</a>
 </div>
 
-<!-- Additional content such as header, skills section, and other body elements go here -->
-div class="container">
+<div class="header" id="home">
+  
+ 
+<!-- Additional sections for About, Projects, Resume, and Blogs would go here -->
+<style>
+
+  .container {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 10px;
+  }
+  .skill {
+    border: 1px solid #5d5d81;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 5px;
+  }
+  .icon {
+    font-size: 2rem; /* Placeholder size for icons */
+    margin-bottom: 8px;
+  }
+  h1 {
+    grid-column: 1 / -1;
+    color: #d3d3f8;
+    text-align: center;
+  }
+</style>
+</head>
+
+<div class="container">
   <h1>Professional Skillset</h1>
   <div class="skill">
     <div class="icon">🌐</div> <!-- Placeholder icon for AWS -->
@@ -96,5 +157,9 @@ div class="container">
   </div>
   <!-- Add other skills with icons here -->
 </div>
+
 </body>
 </html>
+
+</html>
+    <img src="/Images/myimage.jpg" alt="Projects" title="Optional title attribute" width="400"/>
