--- a/About.html
+++ b/About.html
@@ -122,7 +122,25 @@
 </head>
 
 <div class="container">
+  <div class="about-me" style="color: white; padding: 2em; text-align: center;">
+  <h2>A little about ME</h2>
+  <p>Hello there Elsh here. Born and raised in Addis Ababa, Ethiopia.<br>
+  I'm a software engineering senior year student at Addis Ababa University.</p>
+  
+  <p>Apart from coding, what do I enjoy?</p>
+  <ul>
+    <li>Writing</li>
+    <li>Playing Basketball</li>
+    <li>Travelling</li>
+  </ul>
+  
+  <blockquote>
+    "What you need to learn isn't how to make everything easy; but what to do when something is hard"<br>
+    — Silvia, 12th July, 2022
+  </blockquote>
+</div>
   <h1>Professional Skillset</h1>
+  
   <div class="skill">
     <div class="icon">🌐</div> <!-- Placeholder icon for AWS -->
     AWS
