--- a/About.html
+++ b/About.html
@@ -124,8 +124,8 @@
 <div class="container">
   <div class="about-me" style="color: white; padding: 2em; text-align: center;">
   <h2>A little about ME</h2>
-  <p>Hello there Elsh here. Born and raised in Addis Ababa, Ethiopia.<br>
-  I'm a software engineering senior year student at Addis Ababa University.</p>
+  <p>Hello there Liyew here. Born and raised in Addis Ababa, Ethiopia.<br>
+  I'm an Artificial Intelligence Master's student at Gwangju Institute of Sciense and Technology(GIST), South Korea.</p>
   
   <p>Apart from coding, what do I enjoy?</p>
   <ul>
