--- a/About.html
+++ b/About.html
@@ -7,6 +7,10 @@
 <!-- Include Font Awesome CDN for icons -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
 <style>
+  html {
+  overflow-y: scroll; /* This forces the vertical scrollbar to always be present */
+}
+
   body {
     font-family: 'Arial', sans-serif;
     color: white;
