--- a/About.html
+++ b/About.html
@@ -169,9 +169,21 @@
     <div class="icon">🐍</div> <!-- Placeholder icon for Django -->
     Django
   </div>
+   <div class="skill">
+    <div class="icon">🐍</div> <!-- Placeholder icon for Django -->
+    Django
+  </div>
   <div class="skill">
     <div class="icon">🐍</div> <!-- Placeholder icon for Python -->
-    Python
+    VS code 
+  </div>
+   <div class="skill">
+    <div class="icon">🐍</div> <!-- Placeholder icon for Django -->
+    Postman
+  </div>
+   <div class="skill">
+    <div class="icon">🐍</div> <!-- Placeholder icon for Django -->
+    Zeplin
   </div>
   <!-- Add other skills with icons here -->
 </div>
