--- a/About.html
+++ b/About.html
@@ -171,8 +171,12 @@
   </div>
    <div class="skill">
     <div class="icon">🐍</div> <!-- Placeholder icon for Django -->
-    Django
+    Python
   </div>
+
+  
+   <h1>Professional Skillset</h1>
+  
   <div class="skill">
     <div class="icon">🐍</div> <!-- Placeholder icon for Python -->
     VS code 
