--- a/About.html
+++ b/About.html
@@ -121,24 +121,26 @@
 </style>
 </head>
 
-<div class="container">
-  <div class="about-me" style="color: white; padding: 2em; text-align: center;">
-  <h2>A little about ME</h2>
-  <p>Hello there Liyew here. Born and raised in Addis Ababa, Ethiopia.<br>
-  I'm an Artificial Intelligence Master's student at Gwangju Institute of Sciense and Technology(GIST), South Korea.</p>
-  
-  <p>Apart from coding, what do I enjoy?</p>
-  <ul>
-    <li>Writing</li>
-    <li>Playing Basketball</li>
-    <li>Travelling</li>
-  </ul>
-  
-  <blockquote>
-    "What you need to learn isn't how to make everything easy; but what to do when something is hard"<br>
-    — Silvia, 12th July, 2022
-  </blockquote>
+<div class="container" style="max-width: 800px; margin: auto; padding: 2em; background: rgba(255, 255, 255, 0.1); border-radius: 10px;">
+  <div class="about-me" style="color: white; text-align: center;">
+    <h2 style="font-size: 2.5em; color: #FFD700; margin-bottom: 0.5em;">A little about ME</h2>
+    <p style="font-size: 1.2em; line-height: 1.6; color: #ADFF2F;">Hello there Liyew here. Born and raised in Addis Ababa, Ethiopia.<br>
+    I'm an Artificial Intelligence Master's student at Gwangju Institute of Science and Technology (GIST), South Korea.</p>
+    
+    <p style="font-size: 1.4em; margin-top: 2em; color: #7DF9FF;">Apart from coding, what do I enjoy?</p>
+    <ul style="list-style-type: none; padding: 0;">
+      <li style="font-size: 1.2em; padding: 0.2em 0; color: #F0E68C;">✍️ Writing</li>
+      <li style="font-size: 1.2em; padding: 0.2em 0; color: #F0E68C;">🏀 Playing Basketball</li>
+      <li style="font-size: 1.2em; padding: 0.2em 0; color: #F0E68C;">🌍 Travelling</li>
+    </ul>
+    
+    <blockquote style="font-style: italic; margin: 2em 0; color: #DDA0DD;">
+      "What you need to learn isn't how to make everything easy; but what to do when something is hard"<br>
+      — Silvia, 12th July, 2022
+    </blockquote>
+  </div>
 </div>
+
   <h1>Professional Skillset</h1>
   
   <div class="skill">
@@ -186,7 +188,7 @@
     Postman
   </div>
    <div class="skill">
-    <div class="icon">🐍</div> <!-- Placeholder icon for Django -->
+    <div class="icon"></div> <!-- Placeholder icon for Django -->
     Zeplin
   </div>
   <!-- Add other skills with icons here -->
