--- a/About.html
+++ b/About.html
@@ -120,8 +120,7 @@
   }
 </style>
 </head>
-
-<div class="container" style="display: flex; align-items: center; justify-content: center; flex-wrap: wrap; gap: 20px; max-width: 800px; margin: auto; padding: 2em; background: rgba(255, 255, 255, 0.1); border-radius: 10px;">
+<div>
   <div class="about-me" style="flex: 1; min-width: 300px; color: white; text-align: center;">
     <h2 style="font-size: 2.5em; color: #FFD700; margin-bottom: 0.5em;">A little about ME</h2>
     <p style="font-size: 1.2em; line-height: 1.6; color: #ADFF2F;">Hello there Liyew here. Born and raised in Addis Ababa, Ethiopia.<br>
