--- a/About.html
+++ b/About.html
@@ -9,20 +9,16 @@
 <style>
   body {
     font-family: 'Arial', sans-serif;
- 
     color: white;
     margin: 0;
     padding: 0;
-    background-image: url('https://th.bing.com/th/id/OIP.CDFwWuwNv27fcHTIa4H1tgHaE7?w=252&h=180&c=7&r=0&o=5&dpr=1.3&pid=1.7'); /* Replace with your image URL */
-    background-size: cover; /* This will make sure your image covers the whole page */
-    background-repeat: no-repeat; /* This will prevent the image from repeating */
+    background-image: url('https://th.bing.com/th/id/OIP.CDFwWuwNv27fcHTIa4H1tgHaE7?w=252&h=180&c=7&r=0&o=5&dpr=1.3&pid=1.7');
     background-size: cover;
     background-repeat: no-repeat;
-   
   }
   .navbar {
     display: flex;
-    justify-content: flex-end; /* Align nav items to the right */
+    justify-content: flex-end;
     padding: 1em;
     background-color: #333;
   }
@@ -40,65 +36,31 @@
     text-decoration-color: #ff00ff;
     border-color: #ff00ff;
   }
-  .header {
+  .content-row {
     display: flex;
-    align-items: center;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 20px;
+    max-width: 1200px;
+    margin: auto;
     padding: 2em;
-    text-align: left; /* Align text to the left */
+    background: rgba(255, 255, 255, 0.1);
+    border-radius: 10px;
   }
-  .header img {
-    max-width: 100px; /* Adjust the size as needed */
-    margin-right: 20px; /* Space between image and text */
+  .about-and-image {
+    display: flex;
+    gap: 20px;
+    align-items: flex-start;
   }
-  .header .greeting {
-    margin-right: auto; /* Push everything else to the right */
-  }
-  .header h1 {
-    font-size: 2.5em;
-    transition: transform 0.3s ease;
-  }
-  .header h1:hover {
-    transform: scale(1.1);
-  }
-  .cta {
-    text-decoration: none;
-    background-color: purple;
+  .about-me {
+    flex: 1;
+    min-width: 300px;
     color: white;
-    padding: 1em 2em;
-    border-radius: 5px;
-    transition: background-color 0.3s ease;
-  }
-  .cta:hover {
-    background-color: #6f42c1;
-  }
-  .footer {
     text-align: center;
-    padding: 1em;
-    background-color: #333;
   }
-
-</style>
-</head>
-<body>
-<div class="navbar">
-  <a href="Home.html"><i class="fas fa-home"></i>home</a>
-  <a href="About.html"><i class="fas fa-user"></i>About</a>
-  <a href="projects.html"><i class="fas fa-briefcase"></i>Projects</a>
-  <a href="https://github.com/woletee" target="_blank"><i class="fab fa-github"></i> GitHub</a>
-  <a href="Cv.pdf" target="_blank"><i class="fas fa-file-alt"></i>Resume</a>
-  <a href="Blogs.html"><i class="fas fa-blog"></i>Blogs</a>
-</div>
-
-<div class="header" id="home">
-  
- 
-<!-- Additional sections for About, Projects, Resume, and Blogs would go here -->
-<style>
-
-  .container {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    gap: 10px;
+  .skills-list {
+    width: 100%;
   }
   .skill {
     border: 1px solid #5d5d81;
@@ -110,96 +72,63 @@
     border-radius: 5px;
   }
   .icon {
-    font-size: 2rem; /* Placeholder size for icons */
+    font-size: 2rem; 
     margin-bottom: 8px;
-  }
-  h1 {
-    grid-column: 1 / -1;
-    color: #d3d3f8;
-    text-align: center;
   }
 </style>
 </head>
-<div>
-  <div class="about-me" style="flex: 1; min-width: 300px; color: white; text-align: center;">
-    <h2 style="font-size: 2.5em; color: #FFD700; margin-bottom: 0.5em;">A little about ME</h2>
-    <p style="font-size: 1.2em; line-height: 1.6; color: #ADFF2F;">Hello there Liyew here. Born and raised in Addis Ababa, Ethiopia.<br>
-    I'm an Artificial Intelligence Master's student at Gwangju Institute of Science and Technology (GIST), South Korea.</p>
-  </div>
-  
-  <div style="flex: 1; min-width: 300px; color: white; text-align: center;">
-    <p style="font-size: 1.4em; margin-top: 2em; color: #7DF9FF;">Apart from coding, what do I enjoy?</p>
-    <ul style="list-style-type: none; padding: 0;">
-      <li style="font-size: 1.2em; padding: 0.2em 0; color: #F0E68C;">✍️ Writing</li>
-      <li style="font-size: 1.2em; padding: 0.2em 0; color: #F0E68C;">🏀 Playing Basketball</li>
-      <li style="font-size: 1.2em; padding: 0.2em 0; color: #F0E68C;">🌍 Travelling</li>
-    </ul>
-  </div>
-  
-  <div style="flex: 1; min-width: 300px; color: white; text-align: center;">
-    <blockquote style="font-style: italic; margin: 2em 0; color: #DDA0DD;">
-      "What you need to learn isn't how to make everything easy; but what to do when something is hard"<br>
-      — Silvia, 12th July, 2022
-    </blockquote>
-  </div>
+<body>
+<div class="navbar">
+  <a href="Home.html"><i class="fas fa-home"></i> Home</a>
+  <a href="About.html"><i class="fas fa-user"></i> About</a>
+  <a href="projects.html"><i class="fas fa-briefcase"></i> Projects</a>
+  <a href="https://github.com/woletee" target="_blank"><i class="fab fa-github"></i> GitHub</a>
+  <a href="Cv.pdf" target="_blank"><i class="fas fa-file-alt"></i> Resume</a>
+  <a href="Blogs.html"><i class="fas fa-blog"></i> Blogs</a>
 </div>
 
-
-  <h1>Professional Skillset</h1>
-  
-  <div class="skill">
-    <div class="icon">🌐</div> <!-- Placeholder icon for AWS -->
-    AWS
-  </div>
-  <div class="skill">
-    <div class="icon">🔤</div> <!-- Placeholder icon for JS -->
-    JS
-  </div>
-  <div class="skill">
-    <div class="icon">🟢</div> <!-- Placeholder icon for Node.js -->
-    Node.js
-  </div>
-  <div class="skill">
-    <div class="icon">⚛️</div> <!-- Placeholder icon for React -->
-    React
-  </div>
-  <div class="skill">
-    <div class="icon">🔥</div> <!-- Placeholder icon for Flask -->
-    Flask
-  </div>
-  <div class="skill">
-    <div class="icon">🔗</div> <!-- Placeholder icon for GraphQL -->
-    GraphQL
-  </div>
-  <div class="skill">
-    <div class="icon">🐍</div> <!-- Placeholder icon for Django -->
-    Django
-  </div>
-   <div class="skill">
-    <div class="icon">🐍</div> <!-- Placeholder icon for Django -->
-    Python
+<div class="content-row">
+  <div class="about-and-image">
+    <div class="about-me">
+      <h2 style="font-size: 2.5em; color: #FFD700; margin-bottom: 0.5em;">A little about ME</h2>
+      <p style="font-size: 1.2em; line-height: 1.6; color: #ADFF2F;">Hello there Liyew here. Born and raised in Addis Ababa, Ethiopia.<br>
+      I'm an Artificial Intelligence Master's student at Gwangju Institute of Science and Technology (GIST), South Korea.</p>
+      <p style="font-size: 1.4em; margin-top: 2em; color: #7DF9FF;">Apart from coding, what do I enjoy?</p>
+      <ul style="list-style-type: none; padding: 0;">
+        <li style="font-size: 1.2em; padding: 0.2em 0; color: #F0E68C;">✍️ Writing</li>
+        <li style="font-size: 1.2em; padding: 0.2em 0; color: #F0E68C;">🏀 Playing Basketball</li>
+        <li style="font-size: 1.2em; padding: 0.2em 0; color: #F0E68C;">🌍 Travelling</li>
+      </ul>
+      <blockquote style="font-style: italic; margin: 2em 0; color: #DDA0DD;">
+        "What you need to learn isn't how to make everything easy; but what to do when something is hard"<br>
+        — Silvia, 12th July, 2022
+      </blockquote>
+    </div>
+    <div>
+      <img src="/Images/myimage.jpg" alt="Projects" title="Optional title attribute" width="400"/>
+    </div>
   </div>
 
-  
-   <h1>Tools I Used</h1>
-  
-  <div class="skill">
-    <div class="icon">🐍</div> <!-- Placeholder icon for Python -->
-    VS code 
+  <div class="skills-list">
+    <h1>Professional Skillset</h1>
+    <!-- Skill items -->
+    <div class="skill">
+      <div class="icon">🌐</div> <!-- Placeholder icon for AWS -->
+      AWS
+    </div>
+    <!-- ... other skills ... -->
   </div>
-   <div class="skill">
-    <div class="icon">🐍</div> <!-- Placeholder icon for Django -->
-    Postman
+
+  <div class="skills-list">
+    <h1>Tools I Used</h1>
+    <!-- Tool items -->
+    <div class="skill">
+      <div class="icon">🌐</div> <!-- Placeholder icon for VS Code -->
+      VS Code
+    </div>
+    <!-- ... other tools ... -->
   </div>
-   <div class="skill">
-    <div class="icon"></div> <!-- Placeholder icon for Django -->
-    Zeplin
-  </div>
-  <!-- Add other skills with icons here -->
 </div>
 
 </body>
 </html>
-
-</html>
-    <img src="/Images/myimage.jpg" alt="Projects" title="Optional title attribute" width="400"/>
