--- a/About.html
+++ b/About.html
@@ -109,23 +109,51 @@
     </div>
   </div>
 
-  <div class="skills-list">
-    <h1>Professional Skillset</h1>
-    <!-- Skill items -->
-    <div class="skill">
-      <div class="icon">🌐</div> <!-- Placeholder icon for AWS -->
-      AWS
-    </div>
-    <!-- ... other skills ... -->
+<div class="skill">
+    <div class="icon">🔤</div> <!-- Placeholder icon for JS -->
+    JS
   </div>
-
-  <div class="skills-list">
-    <h1>Tools I Used</h1>
-    <!-- Tool items -->
-    <div class="skill">
-      <div class="icon">🌐</div> <!-- Placeholder icon for VS Code -->
-      VS Code
-    </div>
+  <div class="skill">
+    <div class="icon">🟢</div> <!-- Placeholder icon for Node.js -->
+    Node.js
+  </div>
+  <div class="skill">
+    <div class="icon">⚛️</div> <!-- Placeholder icon for React -->
+    React
+  </div>
+  <div class="skill">
+    <div class="icon">🔥</div> <!-- Placeholder icon for Flask -->
+    Flask
+  </div>
+  <div class="skill">
+    <div class="icon">🔗</div> <!-- Placeholder icon for GraphQL -->
+    GraphQL
+  </div>
+  <div class="skill">
+    <div class="icon">🐍</div> <!-- Placeholder icon for Django -->
+    Django
+  </div>
+   <div class="skill">
+    <div class="icon">🐍</div> <!-- Placeholder icon for Django -->
+    Python
+  </div>
+  
+   <h1>Tools I Used</h1>
+  
+  <div class="skill">
+    <div class="icon">🐍</div> <!-- Placeholder icon for Python -->
+    VS code 
+  </div>
+   <div class="skill">
+    <div class="icon">🐍</div> <!-- Placeholder icon for Django -->
+    Postman
+  </div>
+   <div class="skill">
+    <div class="icon"></div> <!-- Placeholder icon for Django -->
+    Zeplin
+  </div>
+  <!-- Add other skills with icons here -->
+</div>
     <!-- ... other tools ... -->
   </div>
 </div>
