--- a/About.html
+++ b/About.html
@@ -91,7 +91,7 @@
   <div class="about-and-image">
     <div class="about-me">
       <h2 style="font-size: 2.5em; color: #FFD700; margin-bottom: 0.5em;">A little about ME</h2>
-      <p style="font-size: 1.2em; line-height: 1.6; color: #ADFF2F;">Hello there Liyew here. Born and raised in Addis Ababa, Ethiopia.<br>
+      <p style="font-size: 1.2em; line-height: 1.6; color: #ADFF2F;">Hello there Liyew is here.<br></br> Born and raised in Addis Ababa, Ethiopia.<br>
       I'm an Artificial Intelligence Master's student at Gwangju Institute of Science and Technology (GIST), South Korea.</p>
       <p style="font-size: 1.4em; margin-top: 2em; color: #7DF9FF;">Apart from coding, what do I enjoy?</p>
       <ul style="list-style-type: none; padding: 0;">
@@ -105,7 +105,7 @@
       </blockquote>
     </div>
     <div>
-      <img src="/Images/backgroundd.jpg" alt="Projects" title="Optional title attribute" width="400"/>
+      <img src="/Images/backgroundd.PNG" alt="Projects" title="Optional title attribute" width="400"/>
     </div>
   </div>
 
