--- a/About.html
+++ b/About.html
@@ -105,7 +105,7 @@
       </blockquote>
     </div>
     <div>
-      <img src="/Images/backgroundd.PNG" alt="Projects" title="Optional title attribute" width="400"/>
+      <img src="/Images/im3.png" alt="Projects" title="Optional title attribute" width="400"/>
     </div>
   </div>
 
