--- a/About.html
+++ b/About.html
@@ -90,14 +90,14 @@
 <div class="content-row">
   <div class="about-and-image">
     <div class="about-me">
-      <h2 style="font-size: 2.5em; color: #FFD700; margin-bottom: 0.5em;">A little about ME</h2>
-      <p style="font-size: 1.2em; line-height: 1.6; color: #ADFF2F;">Hello there Liyew is here.<br></br> Born and raised in Addis Ababa, Ethiopia.<br>
+      <h2 style="font-size: 2.5em; color: #FFFFFF; margin-bottom: 0.5em;">A little about ME</h2>
+      <p style="font-size: 1.2em; line-height: 1.6; color: #FFFFFF;">Hello there Liyew is here.<br></br> Born and raised in Addis Ababa, Ethiopia.<br>
       I'm an Artificial Intelligence Master's student at Gwangju Institute of Science and Technology (GIST), South Korea.</p>
-      <p style="font-size: 1.4em; margin-top: 2em; color: #7DF9FF;">Apart from coding, what do I enjoy?</p>
+      <p style="font-size: 1.4em; margin-top: 2em; color: #FFFFFF;">Apart from coding, what do I enjoy?</p>
       <ul style="list-style-type: none; padding: 0;">
-        <li style="font-size: 1.2em; padding: 0.2em 0; color: #F0E68C;">✍️ Writing</li>
-        <li style="font-size: 1.2em; padding: 0.2em 0; color: #F0E68C;">🏀 Playing Basketball</li>
-        <li style="font-size: 1.2em; padding: 0.2em 0; color: #F0E68C;">🌍 Travelling</li>
+        <li style="font-size: 1.2em; padding: 0.2em 0; color: #FFFFFF;">✍️ Writing</li>
+        <li style="font-size: 1.2em; padding: 0.2em 0; color: #FFFFFF;">🏀 Playing Basketball</li>
+        <li style="font-size: 1.2em; padding: 0.2em 0; color: #FFFFFF;">🌍 Travelling</li>
       </ul>
       <blockquote style="font-style: italic; margin: 2em 0; color: #DDA0DD;">
         "What you need to learn isn't how to make everything easy; but what to do when something is hard"<br>
