--- a/About.html
+++ b/About.html
@@ -108,7 +108,7 @@
       <img src="/Images/im3.png" alt="Projects" title="Optional title attribute" width="400"/>
     </div>
   </div>
-
+<div>
 <div class="skill">
     <div class="icon">🔤</div> <!-- Placeholder icon for JS -->
     JS
@@ -138,6 +138,8 @@
     Python
   </div>
   <br></br>
+</div>
+  <div>
    <h1>Tools I Used</h1>
   
   <div class="skill">
@@ -153,8 +155,6 @@
     Zeplin
   </div>
   <!-- Add other skills with icons here -->
-</div>
-    <!-- ... other tools ... -->
   </div>
 </div>
 
