--- a/About.html
+++ b/About.html
@@ -109,7 +109,10 @@
     </div>
   </div>
 <div>
+  <div>
 <div class="skill">
+    <h1>Professional Skills Used</h1>
+  
     <div class="icon">🔤</div> <!-- Placeholder icon for JS -->
     JS
   </div>
@@ -157,6 +160,7 @@
   <!-- Add other skills with icons here -->
   </div>
 </div>
+</div>div>
 
 </body>
 </html>
