--- a/About.html
+++ b/About.html
@@ -108,60 +108,50 @@
       <img src="/Images/im3.png" alt="Projects" title="Optional title attribute" width="400"/>
     </div>
   </div>
-<div>
+<div style="width: 100%;">
+  <!-- Professional Skills Section -->
+  <div style="margin-bottom: 20px;">
+    <h1>Professional Skills Used</h1>
+    <div class="skill">
+      <div class="icon">🔤</div> JS
+    </div>
+    <div class="skill">
+      <div class="icon">🟢</div> Node.js
+    </div>
+    <div class="skill">
+      <div class="icon">⚛️</div> React
+    </div>
+    <div class="skill">
+      <div class="icon">🔥</div> Flask
+    </div>
+    <div class="skill">
+      <div class="icon">🔗</div> GraphQL
+    </div>
+    <div class="skill">
+      <div class="icon">🐍</div> Django
+    </div>
+    <div class="skill">
+      <div class="icon">🐍</div> Python
+    </div>
+    <br>
+  </div>
+
+  <!-- Tools Section -->
   <div>
- <h1>Professional Skills Used</h1>
-  
-<div class="skill">
-    
-    <div class="icon">🔤</div> <!-- Placeholder icon for JS -->
-    JS
-  </div>
-  <div class="skill">
-    <div class="icon">🟢</div> <!-- Placeholder icon for Node.js -->
-    Node.js
-  </div>
-  <div class="skill">
-    <div class="icon">⚛️</div> <!-- Placeholder icon for React -->
-    React
-  </div>
-  <div class="skill">
-    <div class="icon">🔥</div> <!-- Placeholder icon for Flask -->
-    Flask
-  </div>
-  <div class="skill">
-    <div class="icon">🔗</div> <!-- Placeholder icon for GraphQL -->
-    GraphQL
-  </div>
-  <div class="skill">
-    <div class="icon">🐍</div> <!-- Placeholder icon for Django -->
-    Django
-  </div>
-   <div class="skill">
-    <div class="icon">🐍</div> <!-- Placeholder icon for Django -->
-    Python
-  </div>
-  <br></br>
-</div>
-  <div>
-   <h1>Tools I Used</h1>
-  
-  <div class="skill">
-    <div class="icon">🐍</div> <!-- Placeholder icon for Python -->
-    VS code 
-  </div>
-   <div class="skill">
-    <div class="icon">🐍</div> <!-- Placeholder icon for Django -->
-    Postman
-  </div>
-   <div class="skill">
-    <div class="icon"></div> <!-- Placeholder icon for Django -->
-    Zeplin
-  </div>
-  <!-- Add other skills with icons here -->
+    <h1>Tools I Used</h1>
+    <div class="skill">
+      <div class="icon">🐍</div> VS Code
+    </div>
+    <div class="skill">
+      <div class="icon">🐍</div> Postman
+    </div>
+    <div class="skill">
+      <div class="icon"></div> Zeplin
+    </div>
   </div>
 </div>
-</div>div>
+
+</div>
 
 </body>
 </html>
