--- a/About.html
+++ b/About.html
@@ -108,9 +108,9 @@
       <img src="/Images/im3.png" alt="Projects" title="Optional title attribute" width="400"/>
     </div>
   </div>
-<div style="width: 100%;">
+<div ">
   <!-- Professional Skills Section -->
-  <div style="margin-bottom: 20px;">
+  <div >
     <h1>Professional Skills Used</h1>
     <div class="skill">
       <div class="icon">🔤</div> JS
