--- a/Home.html
+++ b/Home.html
@@ -116,7 +116,8 @@
     <div id="wordContainer"></div>
     <script>
     document.addEventListener("DOMContentLoaded", function() {
-    const word = "Hello, World!";
+    word1 = "AI Researcher";
+    word2="Machine learning "
     const container = document.getElementById("wordContainer");
     let index = 0;
 
