--- a/Home.html
+++ b/Home.html
@@ -116,8 +116,8 @@
     <div id="wordContainer"></div>
     <script>
     document.addEventListener("DOMContentLoaded", function() {
-    word1 = "AI Researcher";
-    word2="Machine learning "
+   const word1 = "AI Researcher";
+   const  word2="Machine learning "
     const container = document.getElementById("wordContainer");
     let index = 0;
 
