--- a/Home.html
+++ b/Home.html
@@ -91,8 +91,8 @@
 
 <div class="header" id="home">
   
- 
-    <img src="/Images/Capture.PNG" alt="Projects" title="Optional title attribute" width="400"/>
+ <img src="/Images/Capture.PNG" alt="Projects" title="Optional title attribute" style="order: 2; margin-left: 20px; max-width: 100px;" />
+
   <h1 class="greeting">Hi there! <span class="wave">👋</span></h1></div>
   <h1 class="greeting">   I'm W.Maryam LIYEW<span class="wave"></span></h1>
 
