--- a/Home.html
+++ b/Home.html
@@ -91,7 +91,7 @@
 
 <div class="header" id="home">
  
-<img src="/Images/im1.PNG" alt="Projects" title="Optional title attribute" style="margin-left: 50px; max-width: 100px;" />
+<img src="/Images/im1.png" alt="Projects" title="Optional title attribute" style="margin-left: 50px; max-width: 100px;" />
 
   <h1 class="greeting">Hi there! <span class="wave">👋</span></h1></div>
   <h1 class="greeting">   I'm W.Maryam LIYEW<span class="wave"></span></h1>
