--- a/Home.html
+++ b/Home.html
@@ -90,8 +90,7 @@
 </div>
 
 <div class="header" id="home">
- 
-<img src="/Images/im1.png" alt="Projects" title="Optional title attribute" style="margin-left: 50px; max-width: 100px;" />
+ <img src="/Images/im1.png" alt="Projects" title="Optional title attribute" style="order: 2; margin-left: 80px; max-width: 300px;" />
 
   <h1 class="greeting">Hi there! <span class="wave">👋</span></h1></div>
   <h1 class="greeting">   I'm W.Maryam LIYEW<span class="wave"></span></h1>
